--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://LeNikki.github.io/MemeGenerator",
+  "homepage": "http://LeNikki.github.io/MemeGenerator",
   "name": "meme_generator",
   "version": "0.1.0",
   "private": true,
